--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
-    "boxicons": "^2.1.2",
     "@fortawesome/fontawesome-free": "~5.6.3",
-    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.11.6",
     "@types/chart.js": "^2.7.40",
     "angular-bootstrap-md": "^12.2.0",
     "animate.css": "~3.7.2",
     "bootstrap": "^5.2.0",
+    "boxicons": "^2.1.2",
     "chart.js": "^2.7.2",
     "hammerjs": "~2.0.8",
+    "jquery": "^3.6.0",
     "ng-bootstrap": "^1.6.3",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
