--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "chart.js": "^2.7.2",
     "hammerjs": "~2.0.8",
     "jquery": "^3.6.0",
+    "mdb-angular-ui-kit": "^2.3.0",
     "ng-bootstrap": "^1.6.3",
     "popper.js": "^1.16.1",
+    "react-bootstrap": "^2.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
