--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --o",
+    "start": "concurrently \"cd ../api && nodemon index.js  --host 0.0.0.0\" \"ng serve --host 0.0.0.0 --o\" --proxy-config proxyconfig.json --o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
