--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.2.0",
     "boxicons": "^2.1.2",
     "chart.js": "^2.7.2",
+    "concurrently": "^7.3.0",
     "hammerjs": "~2.0.8",
     "jquery": "^3.6.0",
     "mdb-angular-ui-kit": "^2.3.0",
