--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-bootstrap": "^2.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
