--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "boxicons": "^2.1.2",
     "chart.js": "^2.7.2",
     "concurrently": "^7.3.0",
+    "echarts": "^5.2.1",
     "google": "^2.1.0",
     "googleapis": "^105.0.0",
     "hammerjs": "~2.0.8",
     "jquery": "^3.6.0",
     "mdb-angular-ui-kit": "^2.3.0",
     "ng-bootstrap": "^1.6.3",
+    "ngx-echarts": "^7.1.0",
     "popper.js": "^1.16.1",
     "react-bootstrap": "^2.5.0",
     "rxjs": "~6.6.0",
